[project]
name = "statystykiFUW_s"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.2.1",
    "google-generativeai>=0.8.4",
    "marimo>=0.13.0",
    "matplotlib>=3.10.1",
    "polars>=1.26.0",
    "pyarrow>=19.0.1",
    "sqlglot>=26.11.1",
]
# Diagnostics configuration
[tool.marimo.diagnostics]
enabled = true               # Show diagnostics in the editor
